kubernetes/apps/open-webui/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: open-webui-lan-only
  namespace: open-webui
spec:
  ipAllowList:
    sourceRange:
      - 192.168.1.0/24
      - 10.42.0.0/16
